--- a/index.html
+++ b/index.html
@@ -10,30 +10,30 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <title>Project-Absurd-Illustrations</title>
 </head>
+<header>
+    <nav>
+        <ul>
+            <li>Why?</li>
+            <li>Illustration</li>
+            <li>Buy</li>
+        </ul>
+    </nav>
+</header>
 <body>
-    <head>
-        <nav>
-            <ul>
-                <li>Why?</li>
-                <li>Illustration</li>
-                <li>Buy</li>
-            </ul>
-        </nav>
-    </head>
     <main>
         <section class="hero">
             <h1>Absurd illustrations that make sense</h1>
             <p>What about absurd illustrations for your projects? Take every user on an individual journey through their own imagination.</p>
             <div class="hero-btn-wrap">
-                <button class="hero-btn-dark">Download</button>
-                <button class="hero-btn-light">Subsribe</button>
+                <button class="hero-btn btn-dark">Download</button>
+                <button class="hero-btn btn-light">Subsribe</button>
             </div>
         </section>
-        <section class="txt-right">
+        <section class="text-right">
             <h2>real beauty resides in imperfection</h2>
             <p>In a digital era, we sometimes feel the need to interact with something more human that will make us appreciate both the beauty and the imperfection of something made by hand.</p>
         </section>
-        <section class="txt-left">
+        <section class="text-left">
             <h2>expressiveness is... the new black</h2>
             <p>This series of illustrations paradoxically combines absurdity and a deep sense of childishness and naivety.</p>
         </section>
@@ -41,21 +41,21 @@
             <h2>illustrations for applications</h2>
             <p>Welcome to my space for experiments! Look at this like a journey we can take together every step of the way, beginning another chapter with each new phase of the project development. And who knows where it will take us?</p>
             <div class="three-img-row">
-                <div class="img-row-image"></div>
-                <div class="img-row-image"></div>
-                <div class="img-row-image"></div>
+                <div class="img-row-image img-one"></div>
+                <div class="img-row-image img-two"></div>
+                <div class="img-row-image img-three"></div>
             </div>
         </section>
         <section class="portfolio">
             <h2>examples of use</h2>
             <p>Each illustration offers the possibility of limitless interpretations and uses and everyone can give it its own meaning. It depends only on each one's creativity and free spirit.</p>
             <div class="gallery">
-                <div class="gallery-item"></div>
-                <div class="gallery-item"></div>
-                <div class="gallery-item"></div>
-                <div class="gallery-item"></div>
-                <div class="gallery-item"></div>
-                <div class="gallery-item"></div>
+                <div class="gallery-item g-i-1"></div>
+                <div class="gallery-item g-i-2"></div>
+                <div class="gallery-item g-i-3"></div>
+                <div class="gallery-item g-i-4"></div>
+                <div class="gallery-item g-i-5"></div>
+                <div class="gallery-item g-i-6"></div>
             </div>
         </section>
         <section class="shop">
