--- a/index.html
+++ b/index.html
@@ -9,9 +9,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <title>Project-Absurd-Illustrations</title>
+    <style>
+        .html{
+                background-color: #000;
+                color: #fff;
+            }
+    </style>
 </head>
 <header>
     <nav>
+        <button onclick="myFunction()">Toggle DarkMode</button>
         <ul>
             <li>Why?</li>
             <li>Illustration</li>
@@ -89,6 +96,12 @@
             <li>.tw</li>
             <li>.yt</li>
         </ul>
+        <script>
+            function myFunction() {
+               var element = document.body;
+               element.classList.toggle("html");
+            }
+            </script>
     </footer>
 </body>
 </html>
